--- a/package.json
+++ b/package.json
@@ -9,27 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.5",
+    "@prisma/client": "^5.20.0",
+    "@stripe/stripe-js": "^4.0.0",
+    "framer-motion": "^11.0.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@clerk/nextjs": "^5.0.0",
-    "@stripe/stripe-js": "^4.0.0",
     "stripe": "^17.0.0",
-    "@prisma/client": "^5.20.0",
-    "framer-motion": "^11.0.0",
     "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "^14.2.0",
-    "prisma": "^5.20.0"
+    "postcss": "^8",
+    "prisma": "^5.20.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5"
   }
 }
-
