feat: Add admin panel, order tracking, coupons, inventory management, and enhanced Stripe integration
- Add admin dashboard with analytics, order management, coupon management, inventory control, and newsletter management
- Implement order tracking system with 4PX integration and tracking timeline UI
- Add coupon system with discount codes and validation
- Implement inventory management with stock status tracking
- Add wishlist functionality for users
- Add newsletter subscription system
- Enhance Stripe integration with webhook handling and improved checkout flow
- Add address management and saved addresses feature
- Update UI components with improved styling and functionality
- Add comprehensive documentation for Stripe setup and webhook configuration
- Update database schema with new models for orders, coupons, inventory, and tracking

--- a/env.example
+++ b/env.example
@@ -7,6 +7,7 @@ NEXT_PUBLIC_URL=http://localhost:3000
 # Stripe 配置
 STRIPE_SECRET_KEY=sk_test_你的Stripe密钥
 NEXT_PUBLIC_STRIPE_PRICE_ID=price_你的价格ID
+STRIPE_WEBHOOK_SECRET=whsec_你的Webhook签名密钥
 
 # 数据库配置
 DATABASE_URL=postgresql://用户名:密码@localhost:5432/数据库名
@@ -22,3 +23,32 @@ NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 
+# 4PX 物流跟踪
+FOURPX_API_KEY=your_4px_app_key
+FOURPX_API_SECRET=your_4px_app_secret
+FOURPX_CUSTOMER_CODE=your_4px_customer_code
+FOURPX_TRACKING_METHOD=transfer.order.tracking
+FOURPX_SANDBOX=false
+
+# 4PX 发件人信息（用于创建订单）
+FOURPX_SENDER_NAME=Hello1984
+FOURPX_SENDER_PHONE=13800138000
+FOURPX_SENDER_EMAIL=support@hello1984.com
+FOURPX_SENDER_COUNTRY=CN
+FOURPX_SENDER_STATE=Guangdong
+FOURPX_SENDER_CITY=Shenzhen
+FOURPX_SENDER_ADDRESS=Shenzhen Warehouse
+FOURPX_SENDER_ZIP=518000
+
+# 管理员认证（可选，用于增强安全性）
+ADMIN_SESSION_SECRET=change-this-secret-key-in-production
+
+# 邮件服务配置（可选）
+# 支持: console (开发环境，仅打印), resend (使用Resend服务)
+EMAIL_SERVICE=console
+EMAIL_FROM=noreply@hello1984.com
+RESEND_API_KEY=your_resend_api_key
+
+# 产品配置
+NEXT_PUBLIC_PRODUCT_PRICE=29900
+DEFAULT_STOCK=100
