--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:webhook": "node scripts/test-webhook.js"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
@@ -16,6 +17,7 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "resend": "^6.5.2",
     "stripe": "^17.0.0",
     "zod": "^3.23.0"
   },
@@ -24,11 +26,14 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^17.2.3",
     "eslint": "^8",
     "eslint-config-next": "^14.2.0",
     "postcss": "^8",
     "prisma": "^5.20.0",
     "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
   }
 }
